Simplify compilation of Java standard options